--- a/src/index.html
+++ b/src/index.html
@@ -34,11 +34,11 @@
 
   <body>
     <nav class="navbar fixed-bottom bg-info rounded-0 d-print-none">
-      <!-- <div class="text-white">Video Call</div> -->
+      <div class="text-white">Video Call</div>
 
       <div class="pull-right room-comm" hidden>
         <span class="text-white mr-5">
-          <!-- Unique Identifier: <span id="randomNumber"></span> -->
+          Unique Identifier: <span id="randomNumber"></span>
         </span>
         <span class="text-white mr-5"> Name: <span id="fullName"></span> </span>
         <span class="text-white mr-5"> Role: <span id="roleName"></span> </span>
@@ -66,15 +66,15 @@
           <i class="fa fa-desktop text-white"></i>
         </button>
 
-        <!-- <button
+        <button
           class="btn btn-sm rounded-0 btn-no-effect"
           id="record"
           title="Record"
         >
           <i class="fa fa-dot-circle text-white"></i>
-        </button> -->
+        </button>
 
-        <!-- <button
+        <button
           class="btn btn-sm text-white pull-right btn-no-effect"
           id="toggle-chat-pane"
         >
@@ -85,7 +85,7 @@
             hidden
             >New</span
           >
-        </button> -->
+        </button>
 
         <button class="btn btn-sm rounded-0 btn-no-effect text-white">
           <a href="/" class="text-white text-decoration-none"
@@ -150,7 +150,7 @@
         const roomid = urlParams.get("room");
         const userid = urlParams.get("id");
         if (roomid && userid) {
-          fetch(`https://amplifybe-2.onrender.com/api/user-role/${userid}`)
+          fetch(`https://amplifybe-1.onrender.com/api/user-role/${userid}`)
             .then((response) => {
               if (!response.ok) {
                 throw new Error(
