--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
   </head>
 
   <body>
-    <nav class="navbar fixed-top bg-info rounded-0 d-print-none">
+    <nav class="navbar fixed-top  rounded-0 d-print-none">
       <div class="text-white">Video Call</div>
 
       <div class="pull-right room-comm" hidden>
@@ -66,15 +66,15 @@
           <i class="fa fa-desktop text-white"></i>
         </button>
 
-        <button
+        <!-- <button
           class="btn btn-sm rounded-0 btn-no-effect"
           id="record"
           title="Record"
-        >
-          <i class="fa fa-dot-circle text-white"></i>
-        </button>
+        > -->
+          <!-- <i class="fa fa-dot-circle text-white"></i>
+        </button> -->
 
-        <button
+        <!-- <button
           class="btn btn-sm text-white pull-right btn-no-effect"
           id="toggle-chat-pane"
         >
@@ -85,7 +85,7 @@
             hidden
             >New</span
           >
-        </button>
+        </button> -->
 
         <button class="btn btn-sm rounded-0 btn-no-effect text-white">
           <a href="/" class="text-white text-decoration-none"
