--- a/src/index.html
+++ b/src/index.html
@@ -33,13 +33,13 @@
   </head>
 
   <body>
-    <nav class="navbar fixed-bottom bg-info rounded-0 d-print-none">
-      <div class="text-white">Video Call</div>
+    <nav class="navbar fixed-bottom rounded-0 d-print-none">
+      <!-- <div class="text-white">Video Call</div> -->
 
       <div class="pull-right room-comm" hidden>
-        <span class="text-white mr-5">
+        <!-- <span class="text-white mr-5">
           Unique Identifier: <span id="randomNumber"></span>
-        </span>
+        </span> -->
         <span class="text-white mr-5"> Name: <span id="fullName"></span> </span>
         <span class="text-white mr-5"> Role: <span id="roleName"></span> </span>
         <button
@@ -66,15 +66,15 @@
           <i class="fa fa-desktop text-white"></i>
         </button>
 
-        <button
+        <!-- <button
           class="btn btn-sm rounded-0 btn-no-effect"
           id="record"
           title="Record"
-        >
-          <i class="fa fa-dot-circle text-white"></i>
-        </button>
+        > -->
+        <!-- <i class="fa fa-dot-circle text-white"></i>
+        </button> -->
 
-        <button
+        <!-- <button
           class="btn btn-sm text-white pull-right btn-no-effect"
           id="toggle-chat-pane"
         >
@@ -85,7 +85,7 @@
             hidden
             >New</span
           >
-        </button>
+        </button> -->
 
         <button class="btn btn-sm rounded-0 btn-no-effect text-white">
           <a href="/" class="text-white text-decoration-none"
@@ -164,6 +164,7 @@
                 sessionStorage.setItem("room", roomid);
                 sessionStorage.setItem("username", data?.name);
                 sessionStorage.setItem("role", data?.role);
+                sessionStorage.setItem("muteother", data?.CanManagerMuteForAll);
                 document.getElementById("fullName").textContent = data?.name;
                 document.getElementById("roleName").textContent = data?.role;
                 document.querySelector(".room-comm").hidden = false;
