--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
   </head>
 
   <body>
-    <nav class="navbar fixed-bottom bg-info rounded-0 d-print-none">
+    <nav class="navbar fixed-bottom  rounded-0 d-print-none">
       <div class="text-white">Video Call</div>
 
       <div class="pull-right room-comm" hidden>
