--- a/src/index.html
+++ b/src/index.html
@@ -34,11 +34,10 @@
 
   <body>
     <nav class="navbar fixed-bottom  rounded-0 d-print-none">
-      <div class="text-white">Video Call</div>
+      <div class="text-white"></div>
 
       <div class="pull-right room-comm" hidden>
         <span class="text-white mr-5">
-          Unique Identifier: <span id="randomNumber"></span>
         </span>
         <span class="text-white mr-5"> Name: <span id="fullName"></span> </span>
         <span class="text-white mr-5"> Role: <span id="roleName"></span> </span>
