--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
 
   <body>
     <nav class="navbar fixed-bottom  rounded-0 d-print-none">
-      <div class="text-white">Video Call</div>
+      <!-- <div class="text-white">Video Call</div> -->
 
       <div class="pull-right room-comm" hidden>
         <span class="text-white mr-5">
