--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
 
       <div class="pull-right room-comm" hidden>
         <span class="text-white mr-5">
-          Unique Identifier: <span id="randomNumber"></span>
+           <span id="randomNumber"></span>
         </span>
         <span class="text-white mr-5"> Name: <span id="fullName"></span> </span>
         <span class="text-white mr-5"> Role: <span id="roleName"></span> </span>
