--- a/src/index.html
+++ b/src/index.html
@@ -40,8 +40,8 @@
         <span class="text-white mr-5">
            <span id="randomNumber"></span>
         </span>
-        <span class="text-white mr-5"> Name: <span id="fullName"></span> </span>
-        <span class="text-white mr-5"> Role: <span id="roleName"></span> </span>
+        <span class="text-white mr-5">  <span id="fullName"></span> </span>
+        <span class="text-white mr-5">  <span id="roleName"></span> </span>
         <button
           class="btn btn-sm rounded-0 btn-no-effect"
           id="toggle-video"
