--- a/src/index.html
+++ b/src/index.html
@@ -37,11 +37,11 @@
       <!-- <div class="text-white">Video Call</div> -->
 
       <div class="pull-right room-comm" hidden>
-        <span class="text-white mr-5">
+        <span class="text-white ">
            <span id="randomNumber"></span>
         </span>
-        <span class="text-white mr-5">  <span id="fullName"></span> </span>
-        <span class="text-white mr-5">  <span id="roleName"></span> </span>
+        <span class="text-white ">  <span id="fullName"></span> </span>
+        <span class="text-white ">  <span id="roleName"></span> </span>
         <button
           class="btn btn-sm rounded-0 btn-no-effect"
           id="toggle-video"
